--- a/application/static/sass/main.sass
+++ b/application/static/sass/main.sass
@@ -34,7 +34,7 @@
 @import 'components/forms'
 @import 'components/tables'
 @import 'components/navigation'
-@import 'components/layout'
 @import 'components/modals'
-@import 'components/_blocks'
-@import 'components/_elements'
+@import 'components/blocks'
+@import 'components/elements'
+@import 'components/layout'
