--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -79,20 +79,13 @@
             </div>
             
 
-
-            <div class="dialog-container" id="about-site-dialog" aria-hidden="true" aria-labelledby="about-site-title"
-                aria-describedby="about-site-description">
+            <!-- Example modal, remember to add to base.js -->
+            <div class="dialog-container" id="example-dialog" aria-hidden="true" aria-labelledby="example-title"
+                aria-describedby="example-description">
                 <div class="dialog-overlay" data-a11y-dialog-hide></div>
                 <div class="dialog-content center" role="document">
                     <button data-a11y-dialog-hide class="dialog-close" aria-label="Close this dialog window">&times;</button>
-                    <h4>QTApp</h4>
-                    Built with Python Flask, MySQL, Visual Studio Code, and countless other tools made free to the public.
-                    <br />
-                    Made by <a class="fancy-link" href="https://github.com/qthazel">Hazel Lynn</a>
-                    <br />
-                    Contribute to <a class="fancy-link" href="https://github.com/Queer-Theatre-Kalamazoo/qtapp">QTApp on GitHub.</a>
-                    <br />
-                    Check out the <a class="fancy-link" href="https://qtdocs.readthedocs.io/en/latest/">QTDocs.</a>
+                    <p>Blank Modal</p>
                 </div>
             </div>
 
