--- a/application/static/sass/components/_elements.sass
+++ b/application/static/sass/components/_elements.sass
@@ -1,12 +1,14 @@
 #poster,
 #headshot
     // background-image: url('../images/poster.png')
-    background-size: contain
-    background-position: center center
-    // height: 100%
+    // background-size: contain
+    // background-position: center center
     width: 100%
     // max-height: calc(100vh - 120px)
     border-radius: 4px
-    margin-bottom: 10px
-    object-fit: cover
+    object-fit: scale-down
     // padding: 20px
+
+.sidebar
+    display: flex
+    flex-direction: column
