--- a/application/static/sass/main.css
+++ b/application/static/sass/main.css
@@ -982,13 +982,20 @@ div.card-container .card.img {
 
 #poster,
 #headshot {
-  background-size: contain;
-  background-position: center center;
   width: 100%;
   border-radius: 4px;
-  margin-bottom: 10px;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
+}
+
+.sidebar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 /**
