--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -3,11 +3,13 @@
 
 {% block page %}
 <div class="page wrapper">
-    <h2 class="text-center">Welcome to Queer Theatre Kalamazoo!</h2>
-    <div class="justify-center flex-row">
-        <p style="max-width: 700px;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum recusandae ab exercitationem atque nulla quas eligendi corporis aliquam. Ad eligendi aliquid doloribus ratione facilis excepturi rem accusantium hic inventore aliquam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum recusandae ab exercitationem atque nulla quas eligendi corporis aliquam. Ad eligendi aliquid doloribus ratione facilis excepturi rem accusantium hic inventore aliquam.</p>
+    <div id="index-welcome">
+        <h2 class="text-center">Welcome to Queer Theatre Kalamazoo!</h2>
+        <div class="justify-center flex-row">
+            <p style="max-width: 700px;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum recusandae ab exercitationem atque nulla quas eligendi corporis aliquam. Ad eligendi aliquid doloribus ratione facilis excepturi rem accusantium hic inventore aliquam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum recusandae ab exercitationem atque nulla quas eligendi corporis aliquam. Ad eligendi aliquid doloribus ratione facilis excepturi rem accusantium hic inventore aliquam.</p>
+        </div>
     </div>
-    <hr />
+
     <div class="card-container margin-top">
 
         <!-- Job Posting Block -->
