--- a/application/static/sass/components/_elements.sass
+++ b/application/static/sass/components/_elements.sass
@@ -9,6 +9,9 @@
     object-fit: scale-down
     // padding: 20px
 
+a.poster img
+    margin-left: 1rem
+
 .sidebar
     display: flex
     flex-direction: column
