--- a/application/static/sass/components/_navigation.sass
+++ b/application/static/sass/components/_navigation.sass
@@ -3,16 +3,17 @@ header
         display: flex
         flex-direction: row
         align-items: center
-    
+        position: relative
+
 .navbar
-    background: $primary-color    
+    background: $primary-color
 
     .wrapper
         display: flex
-        justify-content: center
+        justify-content: space-between
         align-items: center
         height: 3rem
-        column-gap: 1rem
+        //column-gap: 1rem
 
     span
         opacity: 35%
