--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -1,102 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-    {% set active_page = active_page|default('index') -%}
+{% set active_page = active_page|default('index') -%}
 
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        {% if favicon %} <link rel="shortcut icon" href="{{ favicon }}">
-        {% else %} <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-        {% endif %}
-        <link rel="stylesheet"
-              href="{{ url_for('static', filename='sass/main.css') }}">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-              rel="stylesheet">
-        <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
-        {% if title %}
-            <title>{{ title }}</title>
-        {% else %}
-            <title>Untitled</title>
-        {% endif %}
-        {% block head %}
-        {% endblock %}
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% if favicon %}
+    <link rel="shortcut icon" href="{{ favicon }}">
+    {% else %}
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    {% endif %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='sass/main.css') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Domine:wght@400;500;600;700&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+    {% if title %}
+    <title>{{ title }}</title>
+    {% else %}
+    <title>Untitled</title>
+    {% endif %}
+    {% block head %}
+    {% endblock %}
+</head>
 
-    <body>
-        <div id="loader"></div>
-        <!-- Main Content -->
-        <div id="main">
-            <!-- Header -->
-            <header>
-                <div id="header-brand" class="header wrapper">
-                    <a href="{{ url_for('home') }}" class="logo-circle"></a>
-                    <span class="org-name">Queer Theatre Kalamazoo</span>
-                    
-                </div>
-            </header>
-
-            <!-- Horizontal Navbar -->
-            <div class="navbar">
-                <div class="wrapper">
-                    {% include "partials/navigation.html" %}
-                </div>
+<body>
+    <!-- Main Content -->
+    <div id="main">
+        <!-- Header -->
+        <header>
+            <div id="header-brand" class="header wrapper">
+                <a href="{{ url_for('home') }}" class="logo-circle"></a>
+                <span id="brand-name">Queer Theatre Kalamazoo</span>
+                <div style="flex: 1 1 auto;"></div>
+                <!--<button id="nav-menu-trigger" style="margin: auto auto;">Menu</button>-->
             </div>
-
-            <!-- Page -->
-            {% block page %}
-            {% endblock %}
+        </header>
 
 
-            <!-- Content -->
-            <div id="content" class="margin-top">
-                <div class="wrapper">
-                    <div class="flex-row gap-2">
-                        <div class="flex-col flex-6">
-                            {% block content %}{% endblock %}
-                        </div>
-                        {% if sidebar %}
-                        <div class="sidebar card-container flex-3">
-                                {% block sidebar_image %}{% endblock %}
-                            <div class="card accent full-width">
-                                
-                                <div class="card-wrapper">
-                                    {% block aside %}{% endblock %}
-                                </div>
+        
+
+
+        <!-- Horizontal Navbar -->
+        <div class="navbar">
+            <div class="wrapper">
+                {% include "partials/navigation.html" %}
+            </div>
+        </div>
+
+
+
+        <!-- Page -->
+        {% block page %}
+        {% endblock %}
+
+
+        <!-- Content -->
+        <div id="content" class="margin-top">
+            <div class="wrapper">
+                <div class="flex-row gap-2">
+                    <div class="flex-col flex-6">
+                        {% block content %}{% endblock %}
+                    </div>
+                    {% if sidebar %}
+                    <div class="sidebar card-container flex-3">
+                        {% block sidebar_image %}{% endblock %}
+                        <div class="card accent full-width">
+
+                            <div class="card-wrapper">
+                                {% block aside %}{% endblock %}
                             </div>
                         </div>
-                        {% endif %}
                     </div>
+                    {% endif %}
                 </div>
             </div>
-            
+        </div>
 
-            <!-- Example modal, remember to add to base.js -->
-            <div class="dialog-container" id="example-dialog" aria-hidden="true" aria-labelledby="example-title"
-                aria-describedby="example-description">
-                <div class="dialog-overlay" data-a11y-dialog-hide></div>
-                <div class="dialog-content center" role="document">
-                    <button data-a11y-dialog-hide class="dialog-close" aria-label="Close this dialog window">&times;</button>
-                    <p>Blank Modal</p>
-                </div>
+
+        <!-- Example modal, remember to add to base.js -->
+        <div class="dialog-container" id="example-dialog" aria-hidden="true" aria-labelledby="example-title"
+            aria-describedby="example-description">
+            <div class="dialog-overlay" data-a11y-dialog-hide></div>
+            <div class="dialog-content center" role="document">
+                <button data-a11y-dialog-hide class="dialog-close"
+                    aria-label="Close this dialog window">&times;</button>
+                <p>Blank Modal</p>
             </div>
+        </div>
 
 
-        </div class="main">
-        {% block styles %}
-        {% endblock %}
-        <script src="https://cdn.jsdelivr.net/npm/a11y-dialog@7/dist/a11y-dialog.min.js"></script>
-        <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
-        <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
-        <script type="module" src="{{ url_for('static', filename='js/base.js') }}"></script>
-        <script type="text/javascript">
-            window.onload = function(){
-              setTimeout(function(){
+    </div class="main">
+    {% block styles %}
+    {% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/a11y-dialog@7/dist/a11y-dialog.min.js"></script>
+    <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.min.js"></script>
+    <script src="https://unpkg.com/tippy.js@6/dist/tippy-bundle.umd.js"></script>
+    <script type="module" src="{{ url_for('static', filename='js/base.js') }}"></script>
+    <script type="text/javascript">
+        window.onload = function () {
+            setTimeout(function () {
                 document.getElementById("loader").remove();
-              },1000);
-            };
-        </script>
-    </body>
+            }, 1000);
+        };
+    </script>
+</body>
+
 </html>
+
+<style>
+
+</style>
