--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -5,8 +5,8 @@
 <div class="page wrapper">
     <div id="index-welcome">
         <h2 class="text-center">Welcome to Queer Theatre Kalamazoo!</h2>
-        <div class="justify-center flex-row">
-            <p style="max-width: 700px;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum recusandae ab exercitationem atque nulla quas eligendi corporis aliquam. Ad eligendi aliquid doloribus ratione facilis excepturi rem accusantium hic inventore aliquam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum recusandae ab exercitationem atque nulla quas eligendi corporis aliquam. Ad eligendi aliquid doloribus ratione facilis excepturi rem accusantium hic inventore aliquam.</p>
+        <div class="full-width">
+            <p style="max-width: 700px; margin-left: auto; margin-right: auto;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum recusandae ab exercitationem atque nulla quas eligendi corporis aliquam. Ad eligendi aliquid doloribus ratione facilis excepturi rem accusantium hic inventore aliquam. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum recusandae ab exercitationem atque nulla quas eligendi corporis aliquam. Ad eligendi aliquid doloribus ratione facilis excepturi rem accusantium hic inventore aliquam.</p>
         </div>
     </div>
 
