--- a/application/templates/partials/mobile_navigation.html
+++ b/application/templates/partials/mobile_navigation.html
@@ -1,15 +1,10 @@
 <a class="fancy-link {{ 'active' if active_page == 'index' else '' }}" href="{{ url_for('home') }}">Home</a>
-<span style="color: white;"> | </span>
 <a class="fancy-link {{ 'active' if active_page == 'events' else '' }}" href="{{ url_for('events') }}">Events</a>
-<span style="color: white;"> | </span>
 <a class="fancy-link {{ 'active' if active_page == 'news' else '' }}" href="{{ url_for('bp_post.index_news') }}">News</a>
-<span style="color: white;"> | </span>
 <a class="fancy-link {{ 'active' if active_page == 'about' else '' }}" href="{{ url_for('about') }}">About</a>
-<span style="color: white;"> | </span>
 <a class="fancy-link {{ 'active' if active_page == 'contact' else '' }}" href="#">Contact</a>
-<span style="color: white;"> | </span>
 <a class="fancy-link" href="/#_givealways">Donate</a>
-<span style="color: white;"> | </span>
-<a class="fancy-link" href="https://facebook.com/queertk" >
+
+<!--<a class="fancy-link" href="https://facebook.com/queertk" >
     <svg style="margin-top: 8px;" fill="#fff" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 24 24" width="24px" height="24px"><path fill="none" stroke="#fff" stroke-miterlimit="10" stroke-width="2" d="M12 3A9 9 0 1 0 12 21A9 9 0 1 0 12 3Z"/><path d="M20.949 12.951c.001-.013.004-.025.005-.038C20.953 12.925 20.95 12.938 20.949 12.951zM3.046 12.909c.002.017.005.034.007.051C3.051 12.944 3.047 12.927 3.046 12.909zM13.218 14.385h2.329l.366-2.366h-2.695v-1.293c0-.983.321-1.854 1.241-1.854h1.477V6.807c-.26-.035-.809-.112-1.846-.112-2.166 0-3.436 1.144-3.436 3.75v1.574H8.427v2.366h2.227v6.503C11.095 20.955 11.541 21 12 21c.414 0 .819-.038 1.218-.092V14.385z"/></svg>
-</a>
+</a>-->
